--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,11 +5,13 @@ import CardProject from "./CardProject.astro";
 ---
 
 <section id="projects" class="min-h-screen snap-start pt-10 pb-4">
-  <header class="px-4 mx-auto max-w-[90%] laptop:max-w-[85%]">
-    <h2 class="text-4xl font-bold text-start mb-3">Zona de commits visuales</h2>
+  <header class="px-4 mx-auto text-center max-w-[90%] laptop:max-w-[85%]">
+    <h2 class="text-4xl font-bold mb-3 tablet:text-4xl laptop:text-5xl">
+      Zona de commits visuales
+    </h2>
     <p class="mb-4 text-gray-600 prose-sm">
-      Este espacio reúne mis proyectos más sólidos, pensados para destacar en
-      diseño, funcionalidad y eficiencia.
+      Donde cada diseño cuenta una historia y cada línea de código impulsa
+      experiencias memorables.
     </p>
   </header>
   <Carousel carouselId="solutions-TOWNHOUSES" class="">
