--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,16 +6,17 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="min-h-screen px-4 py-16 bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
+  class="min-h-screen px-4 pb-8 text-center bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
 >
-  <h2 class="text-4xl font-bold text-start mb-3">
-    Soluciones digitales hechas para destacar
-  </h2>
-  <p class="mb-8 text-gray-600 text-start prose-sm">
-    Impulso tu negocio con soluciones digitales personalizadas, diseñadas para
-    ofrecer rendimiento, usabilidad y un impacto visual que realmente diferencia
-    tu marca.
-  </p>
+  <header class="flex flex-col items-center text-center">
+    <h2 class="text-4xl font-bold mb-3 tablet:text-4xl laptop:text-5xl">
+      Soluciones digitales hechas para destacar
+    </h2>
+    <p class="mb-8 text-gray-600 prose-sm laptop:max-w-4/5">
+      Potencio tu marca con soluciones digitales personalizadas, combinando
+      rendimiento, usabilidad y diseño impactante.
+    </p>
+  </header>
 
   <div class="grid grid-cols-12 gap-4">
     {
@@ -56,17 +57,3 @@ import { twMerge } from "tailwind-merge";
     }
   </div>
 </section>
-
-<!-- <section class="px-6 py-12 bg-gray-50">
-  <h2 class="text-2xl font-bold mb-8 text-center">
-    ¿Listo para llevar tu proyecto al siguiente nivel?
-  </h2>
-  <div class="text-center">
-    <a
-      href="#contact"
-      class="bg-blue-500 text-white px-6 py-3 rounded-full shadow-md hover:bg-blue-600 transition"
-    >
-      🚀 ¡Hablemos!
-    </a>
-  </div>
-</section> -->
