Refactor code structure for improved readability and maintainability

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import LaptopAboutMe from "@assets/img-about.jpg";
+import LaptopAboutMe from "@assets/img-about.webp";
 import Avatar from "@assets/my-avatar.png";
 import { aboutMeData } from "@data/aboutMe";
 import { Icon } from "astro-icon/components";
