--- a/src/components/BannerFacebook.astro
+++ b/src/components/BannerFacebook.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import facebookPreview from "@assets/face_promotion1.png";
+import facebookPreview from "@assets/face_promotion.webp";
 import { Icon } from "astro-icon/components";
 import LinkButton from "./LinkButton.astro";
 ---
@@ -64,19 +64,6 @@ import LinkButton from "./LinkButton.astro";
         Entra a un espacio donde el código se convierte en diseño. Tips, ideas y
         proyectos reales contados desde la perspectiva de un frontend developer.
       </p>
-
-      <!-- Botón accesible -->
-      <!-- <a
-        href="https://www.facebook.com/profile.php?id=61578281609381"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="inline-flex items-center flex-shrink-0 gap-2 px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold hover:bg-indigo-700 transition"
-        aria-label="Seguir a Alexis-KRCode en Facebook (se abre en nueva pestaña)"
-      >
-        <Icon name="icon-face" class="w-5 h-5" />
-        Seguir a Alexis-KRCode
-        <span class="sr-only">(se abre en nueva pestaña)</span>
-      </a> -->
       <LinkButton
         url="https://www.facebook.com/profile.php?id=61578281609381"
         className="inline-flex text-xl justify-center items-center flex-shrink-1 gap-2 px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold hover:bg-indigo-700 transition tablet:max-w-11/12"
