--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,14 @@ import Projects from "@components/Projects.astro";
 import Contact from "@components/Contact.astro";
 import Footer from "@components/Footer.astro";
 import BannerFacebook from "@components/BannerFacebook.astro";
+import ExperienceSection from "@components/ExperienceSection.astro";
 ---
 
 <Layout>
   <Hero />
   <About />
   <AutomaticCarouselFade />
+  <ExperienceSection />
   <Projects />
   <Services />
   <BannerFacebook />
