--- a/src/components/BannerFacebook.astro
+++ b/src/components/BannerFacebook.astro
@@ -6,7 +6,7 @@ import LinkButton from "./LinkButton.astro";
 ---
 
 <section
-  class="relative w-full px-6 py-12 bg-gradient-to-r from-indigo-50 via-white to-pink-50 overflow-hidden"
+  class="relative w-full px-6 py-12 bg-gradient-to-r from-alx-100 via-white to-alx-50 overflow-hidden"
   aria-labelledby="facebook-heading"
 >
   <!-- Decoración SVG -->
@@ -56,7 +56,7 @@ import LinkButton from "./LinkButton.astro";
         class="text-4xl font-extrabold text-gray-900 leading-tight"
       >
         Facebook: 👨‍💻Alexis-KRCode<br />
-        <span class="text-indigo-600">Desarrollo Web & Diseño Elegante</span>
+        <span class="text-alx-600">Desarrollo Web & Diseño Elegante</span>
       </h2>
 
       <!-- Descripción -->
@@ -66,7 +66,7 @@ import LinkButton from "./LinkButton.astro";
       </p>
       <LinkButton
         url="https://www.facebook.com/profile.php?id=61578281609381"
-        className="inline-flex text-xl justify-center items-center flex-shrink-1 gap-2 px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold hover:bg-indigo-700 transition tablet:max-w-11/12"
+        className="inline-flex text-xl justify-center items-center flex-shrink-1 gap-2 px-6 py-3 bg-alx-600 text-white rounded-lg font-semibold hover:bg-alx-700 transition tablet:max-w-11/12"
         title="Seguir a Alexis-KRCode"
         ,
         subtitle="vamos, vamos!"
