--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -46,16 +46,14 @@ const experience = [
 
 <section
   id="experiencia"
-  class="text-center mx-auto max-w-[90%] laptop:max-w-[85%] flex flex-col tablet:flex-row gap-8 relative"
+  class="text-center snap-y snap-mandatory min-h-[100vh] mx-auto max-w-[90%] laptop:max-w-[85%] flex flex-col tablet:flex-row relative"
 >
-  <aside
-    class="w-full sticky top-0 z-50 shadow-[0_30px_40px_-10px_rgba(255,255,255,1)] tablet:pt-0 tablet:pb-0 tablet:relative tablet:w-[40%] tablet:mb-0"
-  >
+  <aside class="w-full tablet:pr-2 tablet:relative tablet:w-[40%] tablet:mb-0">
     <header
       class="sticky top-0 py-4 bg-white z-50 tablet:sticky tablet:top-[20%] tablet:text-start"
     >
       <div
-        class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 py-1 px-3 rounded-full uppercase tracking-wideraria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-500 hover:bg-white/90"
+        class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none py-2 px-3 rounded-full uppercase overflow-hidden gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-900"
       >
         Estrategia + Diseño + Tecnología
       </div>
@@ -72,8 +70,8 @@ const experience = [
       {
         experience.map((exp, index) => (
           <div
-            class:list={index === 0 ? "mt-0" : "mt-24"}
-            class={`sticky top-38 z-[${10 + index}] transition-all duration-500 ease-in-out bg-gradient-to-tr from-alx-50 to-alx-100 rounded-2xl px-6 py-8 mx-auto  overflow-hidden flex flex-col tablet:flex-row tablet:items-center tablet:text-start  gap-6`}
+            class:list={index === 0 ? "mt-0" : "mt-16"}
+            class={`sticky top-4 z-[${10 + index}] snap-center bg-gradient-to-tr from-alx-50 to-alx-100 rounded-2xl px-6 py-8 mx-auto  overflow-hidden flex flex-col tablet:flex-row tablet:items-center tablet:text-start  gap-6`}
             data-aos="fade-up"
             data-aos-delay={index * 100}
           >
@@ -92,11 +90,11 @@ const experience = [
               {/* Badge con animación */}
               <span
                 data-slot="badge"
-                class=" bg-alx-100 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 py-1 px-3 rounded-full uppercase tracking-wideraria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-500 hover:bg-white/90"
+                class=" bg-alx-200 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 py-1 px-3 rounded-full uppercase overflow-hidden gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-500 hover:bg-white/90"
               >
                 <div class="relative flex h-2 w-2">
-                  <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75" />
-                  <span class="relative inline-flex rounded-full h-2 w-2 bg-blue-500" />
+                  <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-alx-400 opacity-75" />
+                  <span class="relative inline-flex rounded-full h-2 w-2 bg-alx-500" />
                 </div>
                 <span class="font-medium">{exp.role}</span>
                 <Icon
