feat: update dependencies and integrate AOS for animations
- Added new dependencies for React and AOS animations in package.json.
- Updated About and Hero components to use AOS for fade-in animations.
- Implemented AOS initialization in the index page.
- Refactored global CSS to include animation styles for titles.
- Created a new script for AOS initialization.
- Adjusted TypeScript configuration to support React JSX.

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,18 +13,22 @@ import { Icon } from "astro-icon/components";
     src={Avatar}
     alt="img-my-avatar.png"
     class="w-16 h-16 rounded-xl object-cover object-center absolute top-0 right-4 z-40"
-    data-aos="fade-up"
+    data-aos="fade-in"
   />
   <header
     class="relative laptop:flex laptop:items-center laptop:justify-between laptop:gap-4"
   >
     <div class="laptop:w-[60%]">
-      <span class="font-medium laptop:px-8">¿Quién es?</span>
-      <h2 class="font-bold text-xl mb-2 laptop:text-2xl laptop:px-8">
+      <span class="font-medium laptop:px-8" data-aos="fade-in">¿Quién es?</span>
+      <h2
+        class="font-bold text-xl mb-2 laptop:text-2xl laptop:px-8"
+        data-aos="fade-in"
+      >
         Alexis Chim
       </h2>
       <div
         class="text-black text-lg tablet:text-xl laptop:text-2xl laptop:px-8"
+        data-aos="fade-in"
       >
         <p>
           Cuento con formación en ingeniería en sistemas y soy orgullosamente
@@ -47,7 +51,7 @@ import { Icon } from "astro-icon/components";
         src={LaptopAboutMe}
         alt="img-about-me"
         class="rounded-xl my-6 w-full h-full object-cover object-center laptop:my-0"
-        data-aos="fade-up"
+        data-aos="fade-in"
       />
     </div>
   </header>
