--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,13 +10,14 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
     class="absolute inset-0 -z-10"
     style={{
       background:
-        "radial-gradient(125% 125% at 50% 90%, #fff 40%, #2f4bff 100%)",
+        "radial-gradient(125% 125% at 50% 90%, #fff 40%, #7d28c8 100%)",
     }}
   >
   </div>
   <span
     data-slot="badge"
     class="inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 gap-2 py-2 px-3 sm:px-4 text-xs sm:text-sm rounded-full shadow-lg backdrop-blur-md transition-all duration-300 border bg-white/80 border-gray-200/50 text-gray-900 hover:bg-white/90"
+    data-aos="fade-down"
   >
     <div class="relative flex h-2 w-2">
       <span
@@ -56,7 +57,7 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
     </svg>
   </span>
   <h1
-    class="text-4xl prose tablet:text-5xl desktop:text-6xl font-bold tracking-tight mt-6 mb-1"
+    class="animated-title-hero text-4xl prose tablet:text-5xl desktop:text-6xl font-bold tracking-tight mt-6 mb-1"
   >
     Hola, soy
     <span class="inline-block relative">
@@ -73,6 +74,7 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
 
   <h2
     class="mb-6 text-2xl sm:text-3xl md:text-4xl lg:text-4xl font-bold tracking-tight"
+    data-aos="fade-in"
   >
     <span
       class="bg-gradient-to-r bg-[200%_auto] bg-clip-text leading-tight text-transparent transition-all duration-300 from-neutral-900 via-slate-500 to-neutral-500"
@@ -80,7 +82,8 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
     >
   </h2>
   <p
-    class="text-base sm:text-lg mb-6 sm:mb-8 max-w-lg mx-auto leading-relaxed transition-colors duration-300 px-4 sm:px-0 text-gray-600"
+    class="text-base sm:text-lg mb-6 sm:mb-8 max-w-lg mx-auto leading-relaxed transition-colors px-4 sm:px-0 text-gray-600"
+    data-aos="fade-in"
   >
     <strong>Transformo ideas</strong> en experiencias atractivas y accesibles, siempre
     pensando en el usuario, el
@@ -90,6 +93,7 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
 
   <div
     class="flex flex-col justify-center items-center gap-4 w-full px-10 tablet:px-8 tablet:flex-row tablet:w-4/5 laptop:w-1/2"
+    data-aos="fade-in"
   >
     <a
       href="#projects"
@@ -135,7 +139,11 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
   <footer class="my-7 flex justify-center items-center gap-4">
     {
       iconTools.map((icon) => (
-        <Icon name={icon} class="w-8 h-8 justify-center items-center" />
+        <Icon
+          name={icon}
+          class="w-8 h-8 justify-center items-center"
+          data-aos="fade-in"
+        />
       ))
     }
   </footer>
