feat: Add new components and utilities for improved UI and functionality
- Implemented utility function `cn` for class name merging.
- Created `About` component to showcase personal information and skills.
- Developed `AutomaticCarouselFade` for a smooth looping carousel effect.
- Added `BannerFacebook` component for promoting Facebook profile.
- Introduced `CardProject` component for displaying project details.
- Built `Carousel` component with navigation for project cards.
- Created `Contact` section for user inquiries via WhatsApp.
- Added `ContainerCenter` for consistent layout styling.
- Developed `ExperienceSection` to highlight professional experience.
- Implemented `Footer` for site-wide footer information.
- Created `Hero` section as an introduction with visual appeal.
- Added `LinkButton` component for styled external links.
- Developed `MyCarousel` for displaying projects in a carousel format.
- Created `Projects` section to showcase visual commits.
- Implemented `Services` section to highlight offered services.
- Populated `myExperience` data for experience section.
- Defined project interfaces in `iProjects.tsx` for type safety.

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,7 +1,5 @@
 ---
 import { myProjects } from "@data/myProjects";
-import Carousel from "./Carousel.astro";
-import CardProject from "./CardProject.astro";
 ---
 
 <section id="projects" class="min-h-screen snap-start pt-10 pb-4">
@@ -14,7 +12,7 @@ import CardProject from "./CardProject.astro";
       experiencias memorables.
     </p>
   </header>
-  <Carousel carouselId="solutions-TOWNHOUSES" class="">
+  <!-- <Carousel carouselId="solutions-TOWNHOUSES" class="">
     {myProjects.map((project) => <CardProject project={project} />)}
-  </Carousel>
+  </Carousel> -->
 </section>
