--- a/src/components/myComponents/About.astro
+++ b/src/components/myComponents/About.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="relative px-6 py-12 bg-[#f6f5f4] mx-auto rounded-xl max-w-[90%] laptop:max-w-[85%]"
+  class="relative px-6 py-12 bg-alx-50 mx-auto rounded-xl max-w-[90%] laptop:max-w-[85%]"
 >
   <Image
     src={Avatar}
