--- a/src/components/myComponents/Services.astro
+++ b/src/components/myComponents/Services.astro
@@ -6,16 +6,17 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="min-h-screen px-4 pb-8 text-center bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
+  class="min-h-screen px-4 py-16 text-center bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
 >
   <header class="flex flex-col items-center text-center">
-    <h2 class="text-4xl font-bold mb-3 tablet:text-4xl laptop:text-5xl">
+    <div
+      class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none py-2 px-3 rounded-full uppercase overflow-hidden gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-900"
+    >
+      Potencio tu marca o negocio con.
+    </div>
+    <h2 class="text-4xl font-bold mb-6 tablet:text-4xl laptop:text-6xl">
       Soluciones digitales hechas para destacar
     </h2>
-    <p class="mb-8 text-gray-600 prose-sm laptop:max-w-4/5">
-      Potencio tu marca con soluciones digitales personalizadas, combinando
-      rendimiento, usabilidad y diseño impactante.
-    </p>
   </header>
 
   <div class="grid grid-cols-12 gap-4">
