--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,16 @@
 ---
 import "@styles/global.css";
 import Layout from "@layouts/Layout.astro";
-import Hero from "@components/Hero.astro";
-import About from "@components/About.astro";
-import AutomaticCarouselFade from "@components/AutomaticCarouselFade.astro";
-import Services from "@components/Services.astro";
-import Projects from "@components/Projects.astro";
-import Contact from "@components/Contact.astro";
-import Footer from "@components/Footer.astro";
-import BannerFacebook from "@components/BannerFacebook.astro";
-import ExperienceSection from "@components/ExperienceSection.astro";
+
+import Hero from "@components/myComponents/Hero.astro";
+import About from "@components/myComponents/About.astro";
+import AutomaticCarouselFade from "@components/myComponents/AutomaticCarouselFade.astro";
+import ExperienceSection from "@components/myComponents/ExperienceSection.astro";
+import Projects from "@components/myComponents/Projects.astro";
+import Services from "@components/myComponents/Services.astro";
+import BannerFacebook from "@components/myComponents/BannerFacebook.astro";
+import Contact from "@components/myComponents/Contact.astro";
+import Footer from "@components/myComponents/Footer.astro";
 ---
 
 <Layout>
