--- a/src/components/myComponents/ExperienceSection.astro
+++ b/src/components/myComponents/ExperienceSection.astro
@@ -1,47 +1,6 @@
 ---
+import { experience } from "@data/myExperience";
 import { Icon } from "astro-icon/components";
-
-const experience = [
-  {
-    title: "Landing Page • Diled Smart Home",
-    role: "Diseñador y Desarrollador",
-    description:
-      "Transformamos una idea en una experiencia web moderna y eficaz.",
-    steps: [
-      "Estructura validada con el cliente para objetivos claros",
-      "Diseño en Figma enfocado en usabilidad y conversión",
-      "Desarrollo responsivo con Astro, Tailwind CSS y TypeScript",
-      "Optimización SEO, accesibilidad y rendimiento",
-      "Integración de WhatsApp y microinteracciones elegantes",
-    ],
-  },
-  {
-    title: "Landing Page • Servitec Halachó",
-    role: "Diseñador y Desarrollador",
-    description:
-      "Diseñé una landing profesional enfocada en destacar servicios tecnológicos y facilitar el contacto con clientes potenciales.",
-    steps: [
-      "Definición de objetivos con enfoque comercial",
-      "Interfaz intuitiva con llamados a la acción visibles",
-      "SEO local para destacar en buscadores regionales",
-      "Catálogo de productos con pasarela de servicios",
-      "Proceso ágil, enfocado en entregas efectivas y feedback continuo",
-    ],
-  },
-  {
-    title: "Soluciones Web • Proyectos Personales",
-    role: "Desarrollador Web Full Stack",
-    description:
-      "Desarrollo de experiencias web integrales que combinan diseño moderno, velocidad y funcionalidad para cualquier tipo de negocio.",
-    steps: [
-      "Diseño y desarrollo frontend con enfoque mobile-first",
-      "Integración de APIs REST para contenido dinámico",
-      "Backends ligeros con Node.js y despliegues automatizados",
-      "Experiencias rápidas y optimizadas con métricas reales",
-      "Uso de animaciones y transiciones suaves que elevan el diseño",
-    ],
-  },
-];
 ---
 
 <section
@@ -74,6 +33,7 @@ const experience = [
             class={`sticky top-4 z-[${10 + index}] snap-center bg-gradient-to-tr from-alx-50 to-alx-100 rounded-2xl px-6 py-8 mx-auto  overflow-hidden flex flex-col tablet:flex-row tablet:items-center tablet:text-start  gap-6`}
             data-aos="fade-up"
             data-aos-delay={index * 100}
+            data-aos-once="false"
           >
             {/* Número enumerado */}
             <div class="w-full flex justify-center items-center tablet:w-[20%]">
