--- a/src/components/myComponents/Services.astro
+++ b/src/components/myComponents/Services.astro
@@ -6,7 +6,7 @@ import { twMerge } from "tailwind-merge";
 
 <section
   id="services"
-  class="min-h-screen px-4 py-16 text-center bg-white mx-auto max-w-[90%] laptop:max-w-[85%]"
+  class="min-h-screen py-16 text-center bg-white mx-auto max-w-[90%] tablet:max-w-[85%]"
 >
   <header class="flex flex-col items-center text-center">
     <div
